--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,24 +1,24 @@
 <header>
   <wrapper class="header__wrapper">
     <div class="logo-wrapper">
-      <a href="./"><img src="" alt="Logo"></a>
+      <a href="/amigo-strona/"><img src="" alt="Logo"></a>
       <p>Uczymy jeździć...i to dobrze!</p>
     </div>
     <div class="nav__wrapper">
       <nav class="nav__large">
-        <a href="./o-nas">O nas</a>
-        <a href="./kursy">Kursy</a>
-        <a href="./szkolenia">Szkolenia</a>
-        <a href="./cennik">Cennik</a>
-        <a href="./kontakt">Kontakt</a>
-        <a href="./faq">FAQ</a>
-        <a class="icon" href="./../../../en"><img src="./english-flag.svg" width="30px" height="30px"></a>
+        <a href="/amigo-strona/o-nas">O nas</a>
+        <a href="/amigo-strona/kursy">Kursy</a>
+        <a href="/amigo-strona/szkolenia">Szkolenia</a>
+        <a href="/amigo-strona/cennik">Cennik</a>
+        <a href="/amigo-strona/kontakt">Kontakt</a>
+        <a href="/amigo-strona//faq">FAQ</a>
+        <a class="icon" href="/amigo-strona/en"><img src="./english-flag.svg" width="30px" height="30px"></a>
         <a class="icon" href="#"><img src="./Instagram_logo_2016.svg" width="30px"></a>
         <a class="icon" href="#"><img src="./facebook.svg" width="30px"></a>
         <a class="icon" href="#"><img src="./youtube.svg" width="30px"></a>
       </nav>
       <nav class="nav__small">
-        <a class="icon flag" href="./../../../en"><img src="/english-flag.svg" width="30px"></a>
+        <a class="icon flag" href="/amigo-strona/en"><img src="/english-flag.svg" width="30px"></a>
         <div id="menu">
         <div id="menu-bar">
           <div id="bar1" class="bar"></div>
@@ -27,12 +27,12 @@
         </div>
         <nav class="nav" id="nav">
           <ul>
-            <li><a href="./o-nas">O nas</a></li>
-            <li><a href="./kursy">Kursy</a></li>
-            <li><a href="./szkolenia">Szkolenia</a></li>
-            <li><a href="./cennik">Cennik</a></li>
-            <li><a href="./kontakt">Kontakt</a></li>
-            <li><a href="./faq">FAQ</a></li>
+            <li><a href="/amigo-strona/o-nas">O nas</a></li>
+            <li><a href="/amigo-strona/kursy">Kursy</a></li>
+            <li><a href="/amigo-strona/szkolenia">Szkolenia</a></li>
+            <li><a href="/amigo-strona/cennik">Cennik</a></li>
+            <li><a href="/amigo-strona/kontakt">Kontakt</a></li>
+            <li><a href="/amigo-strona/faq">FAQ</a></li>
             <a class="icon" href="#"><img src="./instagram.svg" width="30px"></a>
             <a class="icon" href="#"><img src="./facebook.svg" width="30px"></a>
             <a class="icon" href="#"><img src="./youtube.svg" width="30px"></a>
