--- a/src/components/SlideCard.astro
+++ b/src/components/SlideCard.astro
@@ -30,7 +30,7 @@ const { href, title, body, direction } = Astro.props;
     border-radius: 0.6rem;
     width: 46%;
     min-height: 15rem;
-		background-image: url('../../6.jpg');
+		background-image: url('./../../6.jpg');
   }
 
 	.link-card {
