--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,24 +1,24 @@
 <header>
   <wrapper class="header__wrapper">
     <div class="logo-wrapper">
-      <a href="/amigo-strona/"><img src="" alt="Logo"></a>
+      <a href="/amigo_strona/"><img src="" alt="Logo"></a>
       <p>Uczymy jeździć...i to dobrze!</p>
     </div>
     <div class="nav__wrapper">
       <nav class="nav__large">
-        <a href="/amigo-strona/o-nas">O nas</a>
-        <a href="/amigo-strona/kursy">Kursy</a>
-        <a href="/amigo-strona/szkolenia">Szkolenia</a>
-        <a href="/amigo-strona/cennik">Cennik</a>
-        <a href="/amigo-strona/kontakt">Kontakt</a>
-        <a href="/amigo-strona//faq">FAQ</a>
-        <a class="icon" href="/amigo-strona/en"><img src="./english-flag.svg" width="30px" height="30px"></a>
-        <a class="icon" href="#"><img src="./Instagram_logo_2016.svg" width="30px"></a>
-        <a class="icon" href="#"><img src="./facebook.svg" width="30px"></a>
-        <a class="icon" href="#"><img src="./youtube.svg" width="30px"></a>
+        <a href="/amigo_strona/o-nas">O nas</a>
+        <a href="/amigo_strona/kursy">Kursy</a>
+        <a href="/amigo_strona/szkolenia">Szkolenia</a>
+        <a href="/amigo_strona/cennik">Cennik</a>
+        <a href="/amigo_strona/kontakt">Kontakt</a>
+        <a href="/amigo_strona//faq">FAQ</a>
+        <a class="icon" href="/amigo_strona/en"><img src="/amigo_strona/english-flag.svg" width="30px" height="30px"></a>
+        <a class="icon" href="#"><img src="/amigo_strona/Instagram_logo_2016.svg" width="30px"></a>
+        <a class="icon" href="#"><img src="/amigo_strona/facebook.svg" width="30px"></a>
+        <a class="icon" href="#"><img src="/amigo_strona/youtube.svg" width="30px"></a>
       </nav>
       <nav class="nav__small">
-        <a class="icon flag" href="/amigo-strona/en"><img src="/english-flag.svg" width="30px"></a>
+        <a class="icon flag" href="/amigo_strona/en"><img src="/english-flag.svg" width="30px"></a>
         <div id="menu">
         <div id="menu-bar">
           <div id="bar1" class="bar"></div>
@@ -27,15 +27,15 @@
         </div>
         <nav class="nav" id="nav">
           <ul>
-            <li><a href="/amigo-strona/o-nas">O nas</a></li>
-            <li><a href="/amigo-strona/kursy">Kursy</a></li>
-            <li><a href="/amigo-strona/szkolenia">Szkolenia</a></li>
-            <li><a href="/amigo-strona/cennik">Cennik</a></li>
-            <li><a href="/amigo-strona/kontakt">Kontakt</a></li>
-            <li><a href="/amigo-strona/faq">FAQ</a></li>
-            <a class="icon" href="#"><img src="./instagram.svg" width="30px"></a>
-            <a class="icon" href="#"><img src="./facebook.svg" width="30px"></a>
-            <a class="icon" href="#"><img src="./youtube.svg" width="30px"></a>
+            <li><a href="/amigo_strona/o-nas">O nas</a></li>
+            <li><a href="/amigo_strona/kursy">Kursy</a></li>
+            <li><a href="/amigo_strona/szkolenia">Szkolenia</a></li>
+            <li><a href="/amigo_strona/cennik">Cennik</a></li>
+            <li><a href="/amigo_strona/kontakt">Kontakt</a></li>
+            <li><a href="/amigo_strona/faq">FAQ</a></li>
+            <a class="icon" href="#"><img src="/amigo_strona/instagram.svg" width="30px"></a>
+            <a class="icon" href="#"><img src="/amigo_strona/facebook.svg" width="30px"></a>
+            <a class="icon" href="#"><img src="/amigo_strona/youtube.svg" width="30px"></a>
           </ul>
         </nav>
       </div>
