--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,52 +32,52 @@ import SlideCard from './../components/SlideCard.astro';
     </section>
     <section class="categories">
       <SlideCard 
-        href="./kursy/placeholder"
+        href="/amigo_strona/kursy/placeholder"
         title="Prawo jazdy każdej kategorii"
         body="A, A1, A2, AM, B, B-automat, B1, B+E, C, C+E"
         direction="slidecard-right"/>
       <SlideCard 
-        href="./kursy/placeholder"
+        href=/amigo_strona/kursy/placeholder"
         title="Szkolenie osób anglojęzycznych"
         body="kategorie B, C"
         direction="slidecard-left"/>
       <SlideCard 
-        href=="./kursy/placeholder"
+        href==/amigo_strona/kursy/placeholder"
         title="Udział biegłego tłumacza na egzaminie państwowym w WORD"
         body=""
         direction="slidecard-right"/>
       <SlideCard 
-        href=="./kursy/placeholder"
+        href==/amigo_strona/kursy/placeholder"
         title="Doszkalanie teoretyczne i praktyczne na wszystkie kat. Prawa jazdy"
         body=""
         direction="slidecard-left"/>
       <SlideCard 
-        href=="./kursy/placeholder"
+        href==/amigo_strona/kursy/placeholder"
         title="Szkolenia na Kwalifikację Wstępną"
         body="kategorie C, D"
         direction="slidecard-right"/>
       <SlideCard 
-        href=="./kursy/placeholder"
+        href==/amigo_strona/kursy/placeholder"
         title="Szkolenia na Kwalifikację Wstępną Przyspieszoną"
         body="kategorie C, D"
         direction="slidecard-left"/>
       <SlideCard 
-        href=="./kursy/placeholder"
+        href==/amigo_strona/kursy/placeholder"
         title="Szkolenia Okresowe kat C, D (co 5 lat)"
         body=""
         direction="slidecard-right"/>
       <SlideCard 
-        href=="./kursy/placeholder"
+        href==/amigo_strona/kursy/placeholder"
         title="Kursy na przewóz towarów niebezpiecznych ADR"
         body=""
         direction="slidecard-left"/>
       <SlideCard 
-        href=="./kursy/placeholder"
+        href==/amigo_strona/kursy/placeholder"
         title="Szkolenia specjalistyczne"
         body="cysterny, promieniotwórcze, wybuchowe"
         direction="slidecard-right"/>
       <SlideCard 
-        href=="./kursy/placeholder"
+        href==/amigo_strona/kursy/placeholder"
         title="Szkolenia na Certyfikat Kompetencji Zawodowych Przewoźnika (ITS)"
         body=""
         direction="slidecard-left"/>
