--- a/src/components/NavEn.astro
+++ b/src/components/NavEn.astro
@@ -6,18 +6,18 @@
     </div>
     <div class="nav__wrapper">
       <nav class="nav__large">
-        <a href="/amigo-strona/en/about-us">About us</a>
-        <a href="/amigo-strona/en/courses">Courses</a>
-        <a href="/amigo-strona/en/prices">Prices</a>
-        <a href="/amigo-strona/en/contact">Contact</a>
-        <a href="/amigo-strona/en/faq">FAQ</a>
+        <a href="/amigo_strona/en/about-us">About us</a>
+        <a href="/amigo_strona/en/courses">Courses</a>
+        <a href="/amigo_strona/en/prices">Prices</a>
+        <a href="/amigo_strona/en/contact">Contact</a>
+        <a href="/amigo_strona/en/faq">FAQ</a>
         <a class="icon" href="/"><img src="/polish-flag.svg" width="30px" height="30px"></a>
         <a class="icon" href="#"><img src="/Instagram_logo_2016.svg" width="30px"></a>
         <a class="icon" href="#"><img src="/facebook.svg" width="30px"></a>
         <a class="icon" href="#"><img src="/youtube.svg" width="30px"></a>
       </nav>
       <nav class="nav__small">
-        <a class="icon flag" href="/amigo-strona/"><img src="/polish-flag.svg" width="30px"></a>
+        <a class="icon flag" href="/amigo_strona/"><img src="/polish-flag.svg" width="30px"></a>
         <div id="menu">
         <div id="menu-bar">
           <div id="bar1" class="bar"></div>
@@ -26,11 +26,11 @@
         </div>
         <nav class="nav" id="nav">
           <ul>
-            <li><a href="/amigo-strona/en/about-us">About us</a></li>
-            <li><a href="/amigo-strona/en/courses">Courses</a></li>
-            <li><a href="/amigo-strona/en/prices">Prices</a></li>
-            <li><a href="/amigo-strona/en/contact">Contact</a></li>
-            <li><a href="/amigo-strona/en/faq">FAQ</a></li>
+            <li><a href="/amigo_strona/en/about-us">About us</a></li>
+            <li><a href="/amigo_strona/en/courses">Courses</a></li>
+            <li><a href="/amigo_strona/en/prices">Prices</a></li>
+            <li><a href="/amigo_strona/en/contact">Contact</a></li>
+            <li><a href="/amigo_strona/en/faq">FAQ</a></li>
             <a class="icon" href="#"><img src="/instagram.svg" width="30px"></a>
             <a class="icon" href="#"><img src="/facebook.svg" width="30px"></a>
             <a class="icon" href="#"><img src="/youtube.svg" width="30px"></a>
