--- a/src/pages/kursy/placeholder.astro
+++ b/src/pages/kursy/placeholder.astro
@@ -8,7 +8,7 @@ import DescriptionCard from '../../components/DescriptionCard.astro'
   <DescriptionCard
   title="Szkolenie"
   body="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum"
-  image="../../5.jpg"
+  image="/amigo_strona/5.jpg"
   price="1000zł"
   />
   <section class="splide" aria-label="Splide Basic HTML Example">
@@ -19,8 +19,8 @@ import DescriptionCard from '../../components/DescriptionCard.astro'
             <img src="data:image/png;base64,..."
             data-splide-lazy="/3.jpg" >
           </div></li>
-        <li class="splide__slide"><div class="slide-img__container"><img src="/3.jpg"></div></li>
-        <li class="splide__slide"><div class="slide-img__container"><img src="/3.jpg"></div></li>
+        <li class="splide__slide"><div class="slide-img__container"><img src="/amigo_strona/3.jpg"></div></li>
+        <li class="splide__slide"><div class="slide-img__container"><img src="/amigo_strona/3.jpg"></div></li>
       </ul>
     </div>
     <ul class="splide__pagination"></ul>
