--- a/src/pages/en.astro
+++ b/src/pages/en.astro
@@ -8,9 +8,9 @@ import SlideCard from '../components/SlideCard.astro';
   <section class="splide" aria-label="Splide Basic HTML Example">
     <div class="splide__track">
       <ul class="splide__list">
-        <li class="splide__slide"><div class="slide-img__container"><img src="/3.jpg"><div class="slide-img__text">Established in 1991</div></li>
-        <li class="splide__slide"><div class="slide-img__container"><img src="/3.jpg"><div class="slide-img__text">Over 20 000 satisfied customers</div></li>
-        <li class="splide__slide"><div class="slide-img__container"><img src="/3.jpg"><div class="slide-img__text">Driving courses of every kind</div></li>
+        <li class="splide__slide"><div class="slide-img__container"><img src="/amigo_strona/3.jpg"><div class="slide-img__text">Established in 1991</div></li>
+        <li class="splide__slide"><div class="slide-img__container"><img src="/amigo_strona/3.jpg"><div class="slide-img__text">Over 20 000 satisfied customers</div></li>
+        <li class="splide__slide"><div class="slide-img__container"><img src="/amigo_strona/3.jpg"><div class="slide-img__text">Driving courses of every kind</div></li>
       </ul>
     </div>
   </section>
@@ -33,12 +33,12 @@ import SlideCard from '../components/SlideCard.astro';
     </section>
     <section class="categories">
       <SlideCard 
-        href="/kursy/placeholder"
+        href="/amigo_strona/kursy/placeholder"
         title="Driving license class B"
         body=""
         direction="slidecard-right"/>
       <SlideCard 
-        href="/kursy/placeholder"
+        href="/amigo_strona/kursy/placeholder"
         title="Driving license class B-automatic"
         body=""
         direction="slidecard-left"/>
