--- a/src/components/NavEn.astro
+++ b/src/components/NavEn.astro
@@ -1,7 +1,7 @@
 <header>
   <wrapper class="header__wrapper">
     <div class="logo-wrapper">
-      <a href="../../../../../../en"><img src="" alt="Logo"></a>
+      <a href="/amigo_strona/en"><img src="" alt="Logo"></a>
       <p>We teach to drive...well!</p>
     </div>
     <div class="nav__wrapper">
