--- a/src/pages/kursy/placeholder.astro
+++ b/src/pages/kursy/placeholder.astro
@@ -19,8 +19,8 @@ import DescriptionCard from '../../components/DescriptionCard.astro'
             <img src="data:image/png;base64,..."
             data-splide-lazy="/3.jpg" >
           </div></li>
-        <li class="splide__slide"><div class="slide-img__container"><img src="/amigo_strona/3.jpg"></div></li>
-        <li class="splide__slide"><div class="slide-img__container"><img src="/amigo_strona/3.jpg"></div></li>
+        <li class="splide__slide"><div class="slide-img__container"><img src="../amigo_strona/3.jpg"></div></li>
+        <li class="splide__slide"><div class="slide-img__container"><img src="../amigo_strona/3.jpg"></div></li>
       </ul>
     </div>
     <ul class="splide__pagination"></ul>
