--- a/src/components/NavEn.astro
+++ b/src/components/NavEn.astro
@@ -11,7 +11,7 @@
         <a href="/amigo_strona/en/prices">Prices</a>
         <a href="/amigo_strona/en/contact">Contact</a>
         <a href="/amigo_strona/en/faq">FAQ</a>
-        <a class="icon" href="/"><img src="/amigo_strona/polish-flag.svg" width="30px" height="30px"></a>
+        <a class="icon" href="/amigo_strona/"><img src="/amigo_strona/polish-flag.svg" width="30px" height="30px"></a>
         <a class="icon" href="#"><img src="/amigo_strona/Instagram_logo_2016.svg" width="30px"></a>
         <a class="icon" href="#"><img src="/amigo_strona/facebook.svg" width="30px"></a>
         <a class="icon" href="#"><img src="/amigo_strona/youtube.svg" width="30px"></a>
@@ -31,9 +31,9 @@
             <li><a href="/amigo_strona/en/prices">Prices</a></li>
             <li><a href="/amigo_strona/en/contact">Contact</a></li>
             <li><a href="/amigo_strona/en/faq">FAQ</a></li>
-            <a class="icon" href="#"><img src="/amigo_strona/instagram.svg" width="30px"></a>
-            <a class="icon" href="#"><img src="/amigo_strona/facebook.svg" width="30px"></a>
-            <a class="icon" href="#"><img src="/amigo_strona/youtube.svg" width="30px"></a>
+            <a class="icon" href="#"><img src="https://miriael.github.io/amigo_strona/instagram.svg" width="30px"></a>
+            <a class="icon" href="#"><img src="https://miriael.github.io/amigo_strona/facebook.svg" width="30px"></a>
+            <a class="icon" href="#"><img src="https://miriael.github.io/amigo_strona/youtube.svg" width="30px"></a>
           </ul>
         </nav>
       </div>
