--- a/src/pages/en/prices.astro
+++ b/src/pages/en/prices.astro
@@ -49,13 +49,12 @@ import LayoutEn from '../../layouts/LayoutEn.astro';
 <style>
   main,
   body {
-    background: silver;
   }
 
   h1,
   caption {
-    text-shadow: none;
-    color: var(--background-blue-dark)
+    color: var(--yellow-color)
+    text-shadow: var(--yellow-text-shadow);
   }
 
   main {
