--- a/src/pages/en/prices.astro
+++ b/src/pages/en/prices.astro
@@ -53,7 +53,7 @@ import LayoutEn from '../../layouts/LayoutEn.astro';
 
   h1,
   caption {
-    color: var(--yellow-color)
+    color: var(--yellow-color);
     text-shadow: var(--yellow-text-shadow);
   }
 
