--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -30,7 +30,7 @@
   .footer {
     clip-path: polygon(0 0,100% 25px,100% 100%,0 100%);
     margin-top: -25px;
-    background-color: #0a3ca1;
+    background-color: var(--background-blue);
     line-height: 1.5em;
   }
 
@@ -50,6 +50,7 @@
 
   .footer__left {
     width: 75%;
+    color: var(--yellow-color);
   }
 
   .footer__right * {
@@ -77,7 +78,7 @@
     padding: 0px;
     color: var(--yellow-color);
     font-size: clamp(0.6rem, 3vw, 1.5rem);
-    text-shadow: var(--yellow-text-shadow);0000000000
+    text-shadow: var(--yellow-text-shadow);
   }
   
   @media (max-width: 680px) {
