--- a/src/components/FooterEn.astro
+++ b/src/components/FooterEn.astro
@@ -30,7 +30,7 @@
   .footer {
     clip-path: polygon(0 0,100% 25px,100% 100%,0 100%);
     margin-top: -25px;
-    background-color: #0a3ca1;
+    background-color: var(--background-blue);
     line-height: 1.5em;
   }
 
