--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,8 +1,13 @@
 <header>
   <wrapper class="header__wrapper">
     <div class="logo-wrapper">
-      <a href="/amigo_strona/"><img src="" alt="Logo"></a>
-      <p>Uczymy jeździć...i to dobrze!</p>
+      <a href="/amigo_strona/"><img class="logoimage" src="/amigo_strona/logo.png" alt="Logo"></a>
+      <div class="header-icons">
+        <a class="icon" href="/amigo_strona/en"><img src="/amigo_strona/english-flag.svg" width="30px" height="30px"></a>
+        <a class="icon" href="#"><img src="/amigo_strona/Instagram_logo_2016.svg" width="30px"></a>
+        <a class="icon" href="#"><img src="/amigo_strona/facebook.svg" width="30px"></a>
+        <a class="icon" href="#"><img src="/amigo_strona/youtube.svg" width="30px"></a>
+      </div>
     </div>
     <div class="nav__wrapper">
       <nav class="nav__large">
@@ -11,11 +16,7 @@
         <a href="/amigo_strona/szkolenia">Szkolenia</a>
         <a href="/amigo_strona/cennik">Cennik</a>
         <a href="/amigo_strona/kontakt">Kontakt</a>
-        <a href="/amigo_strona//faq">FAQ</a>
-        <a class="icon" href="/amigo_strona/en"><img src="/amigo_strona/english-flag.svg" width="30px" height="30px"></a>
-        <a class="icon" href="#"><img src="/amigo_strona/Instagram_logo_2016.svg" width="30px"></a>
-        <a class="icon" href="#"><img src="/amigo_strona/facebook.svg" width="30px"></a>
-        <a class="icon" href="#"><img src="/amigo_strona/youtube.svg" width="30px"></a>
+        <a href="/amigo_strona/faq">FAQ</a>
       </nav>
       <nav class="nav__small">
         <a class="icon flag" href="/amigo_strona/en"><img src="/english-flag.svg" width="30px"></a>
@@ -51,16 +52,21 @@
   }
 
   .logo-wrapper {
-    position: relative;
-    top: 10px;
-    align-self: center;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
   }
 
-  .logo-wrapper p {
-    font-size: clamp(0.6em, 1.5vw, 1em);
-    color: #ffc537;
-    font-weight: bolder;
-    font-style: italic;
+  .header-icons {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .logo-wrapper .logoimage{
+    width: 100%;
+    height: 10dvh;
+    margin: 5px 0px 0px 10px;
   }
 
   #menu {
@@ -77,7 +83,7 @@
   .bar {
     height: 5px;
     width: 100%;
-    background-color: #ffc537;
+    background-color: var(--background-blue);
     display: block;
     border-radius: 5px;
     transition: 0.3s ease;
@@ -98,6 +104,7 @@
     background-color: var(--background-blue);
     margin-bottom: -10px;
     padding: 10px 0px 10px 0px;
+    border-radius: 90px;
   }
 
   .nav {
@@ -115,7 +122,7 @@
   }
 
   .nav li a {
-    color: #ffc537;
+    color: white;
     font-size: 20px;
     text-decoration: none;
   }
@@ -168,7 +175,6 @@
   }
 
   header {
-    background-color: #080064;
     z-index: 999;
     padding-bottom: 10px;
   }
@@ -182,14 +188,12 @@
     margin: 0 auto;
     height: 15dvh;
     min-height: 2em;
-    max-height: 7em;
-    gap: 10px;
   }
 
   .nav__large {
     width: 85%;
     display: flex;
-    gap: 1.6em;
+    gap: 5em;
     align-items: center;
     justify-content: center;
     font-size: clamp(0.55rem, 1.5vw, 1.8rem);
@@ -198,7 +202,6 @@
 
   .nav__large a {
     position: relative;
-    top: 3px;
   }
 
   .nav__large .icon {
@@ -215,7 +218,7 @@
 
   a {
     text-decoration: none;
-    color: #ffc537;
+    color: white;
     font-weight: 700;
     font-size: 1.25em;
     text-shadow: 1px 1px 1px black;
@@ -230,10 +233,18 @@
   }
 
   @media (max-width: 600px) {
+    .header-icons {
+      display: none;
+    }
+
+    .header__wrapper {
+      max-height: 10dvh;
+    }
+
     .logo-wrapper {
       margin: 0 auto;
       position: relative;
-      top: 30%;
+      top: 5%;
     }
 
     .logo-wrapper {
@@ -247,7 +258,8 @@
     .flag {
       position: absolute;
       top: 4%;
-      right: 20%
+      right: 20%;
+      z-index: 99999999
     }
 
     .nav__large {
@@ -256,10 +268,6 @@
     
     .nav__small {
       display: flex;
-    }
-
-    .flag {
-      left: 1.5em;
     }
   }
 
