--- a/src/components/NavEn.astro
+++ b/src/components/NavEn.astro
@@ -1,23 +1,24 @@
 <header>
   <wrapper class="header__wrapper">
     <div class="logo-wrapper">
-      <a href="/amigo_strona/en"><img src="" alt="Logo"></a>
-      <p>We teach to drive...well!</p>
-    </div>
-    <div class="nav__wrapper">
-      <nav class="nav__large">
-        <a href="/amigo_strona/en/about-us">About us</a>
-        <a href="/amigo_strona/en/courses">Courses</a>
-        <a href="/amigo_strona/en/prices">Prices</a>
-        <a href="/amigo_strona/en/contact">Contact</a>
-        <a href="/amigo_strona/en/faq">FAQ</a>
+      <a href="/amigo_strona/en"><img class="logoimage" src="/amigo_strona/logo.png" alt="Logo"></a>
+      <div class="header-icons">
         <a class="icon" href="/amigo_strona/"><img src="/amigo_strona/polish-flag.svg" width="30px" height="30px"></a>
         <a class="icon" href="#"><img src="/amigo_strona/Instagram_logo_2016.svg" width="30px"></a>
         <a class="icon" href="#"><img src="/amigo_strona/facebook.svg" width="30px"></a>
         <a class="icon" href="#"><img src="/amigo_strona/youtube.svg" width="30px"></a>
+      </div>
+    </div>
+    <div class="nav__wrapper">
+      <nav class="nav__large">
+        <a href="/amigo_strona/en/about-us">About Us</a>
+        <a href="/amigo_strona/en/courses">Courses</a>
+        <a href="/amigo_strona/en/prices">Cennik</a>
+        <a href="/amigo_strona/en/contact">Kontakt</a>
+        <a href="/amigo_strona/en/faq">FAQ</a>
       </nav>
       <nav class="nav__small">
-        <a class="icon flag" href="/amigo_strona/"><img src="/amigo_strona/polish-flag.svg" width="30px"></a>
+        <a class="icon flag" href="/amigo_strona/"><img src="/polish-flag.svg" width="30px"></a>
         <div id="menu">
         <div id="menu-bar">
           <div id="bar1" class="bar"></div>
@@ -26,14 +27,14 @@
         </div>
         <nav class="nav" id="nav">
           <ul>
-            <li><a href="/amigo_strona/en/about-us">About us</a></li>
+            <li><a href="/amigo_strona/en/about-us">About Us</a></li>
             <li><a href="/amigo_strona/en/courses">Courses</a></li>
-            <li><a href="/amigo_strona/en/prices">Prices</a></li>
-            <li><a href="/amigo_strona/en/contact">Contact</a></li>
+            <li><a href="/amigo_strona/en/prices">Cennik</a></li>
+            <li><a href="/amigo_strona/en/contact">Kontakt</a></li>
             <li><a href="/amigo_strona/en/faq">FAQ</a></li>
-            <a class="icon" href="#"><img src="https://miriael.github.io/amigo_strona/instagram.svg" width="30px"></a>
-            <a class="icon" href="#"><img src="https://miriael.github.io/amigo_strona/facebook.svg" width="30px"></a>
-            <a class="icon" href="#"><img src="https://miriael.github.io/amigo_strona/youtube.svg" width="30px"></a>
+            <a class="icon" href="#"><img src="/amigo_strona/instagram.svg" width="30px"></a>
+            <a class="icon" href="#"><img src="/amigo_strona/facebook.svg" width="30px"></a>
+            <a class="icon" href="#"><img src="/amigo_strona/youtube.svg" width="30px"></a>
           </ul>
         </nav>
       </div>
@@ -49,16 +50,21 @@
   }
 
   .logo-wrapper {
-    position: relative;
-    top: 10px;
-    align-self: center;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
   }
 
-  .logo-wrapper p {
-    font-size: clamp(0.6em, 1.5vw, 1em);
-    color: #ffc537;
-    font-weight: bolder;
-    font-style: italic;
+  .header-icons {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+  }
+
+  .logo-wrapper .logoimage{
+    width: 100%;
+    height: 10dvh;
+    margin: 5px 0px 0px 10px;
   }
 
   #menu {
@@ -75,7 +81,7 @@
   .bar {
     height: 5px;
     width: 100%;
-    background-color: #ffc537;
+    background-color: var(--background-blue);
     display: block;
     border-radius: 5px;
     transition: 0.3s ease;
@@ -96,6 +102,7 @@
     background-color: var(--background-blue);
     margin-bottom: -10px;
     padding: 10px 0px 10px 0px;
+    border-radius: 90px;
   }
 
   .nav {
@@ -113,7 +120,7 @@
   }
 
   .nav li a {
-    color: #ffc537;
+    color: white;
     font-size: 20px;
     text-decoration: none;
   }
@@ -133,10 +140,9 @@
     width: 0;
     height: 0;
     margin: 30px 0 20px 20px;
-    background: radial-gradient(circle, #080064, #0A3CA1);
+    background: radial-gradient(circle, var(--background-blue), var(--background-blue-dark));
     border-radius: 50%;
     transition: 0.1s ease;
-    transform: translate(60%,-30%)
   }
 
   .change {
@@ -167,7 +173,6 @@
   }
 
   header {
-    background-color: #080064;
     z-index: 999;
     padding-bottom: 10px;
   }
@@ -181,22 +186,20 @@
     margin: 0 auto;
     height: 15dvh;
     min-height: 2em;
-    max-height: 7em;
-    gap: 10px;
   }
 
   .nav__large {
     width: 85%;
     display: flex;
-    gap: 2.2em;
+    gap: 5em;
     align-items: center;
     justify-content: center;
     font-size: clamp(0.55rem, 1.5vw, 1.8rem);
+    margin: 0 auto;
   }
 
   .nav__large a {
     position: relative;
-    top: 3px;
   }
 
   .nav__large .icon {
@@ -213,7 +216,7 @@
 
   a {
     text-decoration: none;
-    color: #ffc537;
+    color: white;
     font-weight: 700;
     font-size: 1.25em;
     text-shadow: 1px 1px 1px black;
@@ -228,20 +231,33 @@
   }
 
   @media (max-width: 600px) {
+    .header-icons {
+      display: none;
+    }
+
+    .header__wrapper {
+      max-height: 10dvh;
+    }
+
     .logo-wrapper {
       margin: 0 auto;
       position: relative;
-      top: 30%;
+      top: 5%;
+    }
+
+    .logo-wrapper {
+      margin: 0 auto;
+    }
+
+    .nav__wrapper {
+      padding: 0px;
     }
 
     .flag {
       position: absolute;
       top: 4%;
-      right: 20%
-    }
-
-    .nav__wrapper {
-      padding: 0px;
+      right: 20%;
+      z-index: 99999999
     }
 
     .nav__large {
@@ -250,10 +266,6 @@
     
     .nav__small {
       display: flex;
-    }
-
-    .flag {
-      left: 1.5em;
     }
   }
 
