--- a/src/components/SlideCard.astro
+++ b/src/components/SlideCard.astro
@@ -42,7 +42,7 @@ const { href, title, body, direction } = Astro.props;
 		padding: 0.25rem;
 		background-size: 400%;
 		border-radius: 0.6rem;
-    border: 4px solid #ffc537;
+    border: 4px solid var(--background-blue);
 		background-position: center;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
 		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
