--- a/src/pages/en.astro
+++ b/src/pages/en.astro
@@ -121,7 +121,7 @@ import SlideCard from '../components/SlideCard.astro';
   }
 
   .stats {
-    background-color:rgb(153, 19, 19);
+    background-color:var(--background-blue);
     display: none;
   }
 
@@ -165,7 +165,7 @@ import SlideCard from '../components/SlideCard.astro';
     .categories {
       clip-path: polygon(0 0,100% 25px,100% 100%,0 100%);
       margin-top: -25px;
-      background-color: var(--background-blue-dark);
+      background-color: white;
       border-radius: 0px;
     }
     .description {
