--- a/src/pages/en/prices.astro
+++ b/src/pages/en/prices.astro
@@ -69,12 +69,13 @@ import LayoutEn from '../../layouts/LayoutEn.astro';
   h1 {
     text-align: center;
     font-size: 3rem;
+    color: #172a92;
   }
 
   .bonuses {
     width: 100%;
     position:relative;
-    background-color: rgb(153, 19, 19);
+    background-color: #172a92;
     text-align: center;
     font-size: clamp(0.7rem, 2.5vw, 1rem);
     padding: 5px 0px 5px 0px;
@@ -101,6 +102,7 @@ import LayoutEn from '../../layouts/LayoutEn.astro';
   caption {
     font-size: 2em;
     margin-bottom: 0.5em;
+    color: #172a92;
   }
 
   table, th, td {
